--- a/components/draggable_audio.css
+++ b/components/draggable_audio.css
@@ -13,7 +13,7 @@
 }
 
 .draggableAudioContainer:hover {
-    background-color: var(--color-background);
+    background-color: var(--ui-kit-color-tertiary-hover);
 }
 
 .draggableAudioDetails {
