--- a/components/draggable_video/styles.css
+++ b/components/draggable_video/styles.css
@@ -5,6 +5,7 @@
   border: 0;
   padding: 0;
   background: transparent;
+  width: fit-content;
 }
 
 .previewVideo {
@@ -21,6 +22,8 @@
 }
 
 .badgeInner {
+  display: flex;
+  align-items: center;
   border-radius: 8px;
   background-color: var(--ui-kit-color-contrast);
   color: var(--ui-kit-color-contrast-fore);
