--- a/components/draggable_audio/draggable_audio.css
+++ b/components/draggable_audio/draggable_audio.css
@@ -1,8 +1,10 @@
 .draggableAudioContainer {
   width: 100%;
   padding: 8px;
+  border: 0;
   border-radius: 4px;
   cursor: pointer;
+  background: transparent;
 }
 
 .draggableAudioInner {
@@ -22,6 +24,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: baseline;
 }
 
 .draggableAudioText {
